--- a/network/acl.html
+++ b/network/acl.html
@@ -49,7 +49,7 @@
                 <h2>Estructura</h2>
                 <p>Los componentes de una ACL (Lista de Control de Acceso) en dispositivos de red incluyen:</p>
                 <ol style="list-style-type: none;">
-                    <li>🌀 <marcador class="resaltado9">Entradas de ACL</marcador></li>
+                    <li>𖦹 <marcador class="resaltado9">Entradas de ACL</marcador></li>
                     <ul style="list-style-type: none;">
                         <li>∘ <marcador class="resaltado8">Permisos: </marcador>Indican si se permite o se deniega el tráfico (permitir/denegar).</li>
                         <li>∘ <marcador class="resaltado8">Protocolos: </marcador>Especifican el tipo de tráfico (por ejemplo, TCP, UDP, ICMP).</li>
@@ -57,25 +57,25 @@
                         <li>∘ <marcador class="resaltado8">Dirección IP de destino: </marcador>La dirección IP del dispositivo al que se envía el tráfico.</li>
                         <li>∘ <marcador class="resaltado8">Puertos de origen y destino: </marcador>Los números de puerto relevantes para el tráfico (especialmente para TCP y UDP).</li>
                     </ul>
-                    <li>🌀 <marcador class="resaltado9">Número de Secuencia</marcador></li>
+                    <li>𖦹 <marcador class="resaltado9">Número de Secuencia</marcador></li>
                     <ul style="list-style-type: none;">
                         <li>∘ Las entradas en una ACL suelen tener un número de secuencia que determina el orden en que se evalúan.</li>
                         <p>Cuando se evalúan los paquetes contra las entradas de una ACL, el orden de las reglas es crucial. La primera regla que coincida con el paquete determina la acción que se tomará, ya sea permitir (allow) o denegar (deny). Esto significa que, si hay dos reglas que podrían aplicarse a un paquete, la acción de la primera regla que coincida se ejecutará, ignorando las reglas posteriores.</p>
                     </ul>
-                    <li>🌀 <marcador class="resaltado9">Tipo de ACL</marcador></li>
+                    <li>𖦹 <marcador class="resaltado9">Tipo de ACL</marcador></li>
                     <ul style="list-style-type: none;">
                         <li>∘ <marcador class="resaltado8">ACL Estándar: </marcador>Controla el tráfico solo por la dirección IP de origen.</li>
                         <li>∘ <marcador class="resaltado8">ACL Extendida: </marcador>Controla el tráfico por dirección IP de origen y destino, protocolo, y puertos.</li>
                     </ul>
-                    <li>🌀 <marcador class="resaltado9">Wildcards</marcador></li>
+                    <li>𖦹 <marcador class="resaltado9">Wildcards</marcador></li>
                     <ul style="list-style-type: none;">
                         <li>∘ Se utilizan para especificar rangos de direcciones IP. Por ejemplo, un wildcard de 0.0.0.255 permitiría cualquier dirección IP dentro de un rango específico.</li>
                     </ul>
-                    <li>🌀 <marcador class="resaltado9">Comentarios</marcador></li>
+                    <li>𖦹 <marcador class="resaltado9">Comentarios</marcador></li>
                     <ul style="list-style-type: none;">
                         <li>∘ Algunos dispositivos permiten agregar comentarios o descripciones a las entradas para facilitar la gestión y la comprensión.</li>
                     </ul>
-                    <li>🌀 <marcador class="resaltado9">Aplicación</marcador></li>
+                    <li>𖦹 <marcador class="resaltado9">Aplicación</marcador></li>
                     <ul style="list-style-type: none;">
                         <li>∘ La ACL se puede aplicar a interfaces de red (entrante o saliente) para controlar el tráfico que pasa a través de ellas.</marcador></li>
                     </ul>
