--- a/network/rip.html
+++ b/network/rip.html
@@ -84,11 +84,11 @@
                 <p>El algoritmo de distance vector en el contexto de RIP (Routing Information Protocol) es un método de enrutamiento en el que cada router comparte información sobre las distancias a diferentes destinos en la red.</p>
                 <p>Conceptos Clave:</p>
                 <ul style="list-style-type: none;">
-                    <li>🌀 <marcador class="resaltado9">Vector de Distancia: </marcador>Cada router mantiene una tabla que contiene la distancia (número de saltos) a cada destino conocido en la red. Esta tabla se actualiza periódicamente.</li>
-                    <li>🌀 <marcador class="resaltado9">Actualización Periódica: </marcador>Los routers envían sus tablas de enrutamiento a sus vecinos en intervalos regulares (cada 30 segundos, por defecto). Esta información incluye la distancia a los destinos y la dirección del siguiente salto.</li>
-                    <li>🌀 <marcador class="resaltado9">Cálculo de Rutas: </marcador>Al recibir actualizaciones de sus vecinos, cada router compara la información recibida con su tabla de enrutamiento. Si encuentra una ruta más corta a un destino, actualiza su tabla.</li>
-                    <li>🌀 <marcador class="resaltado9">Métrica de Saltos: </marcador>RIP utiliza el número de saltos como su única métrica para determinar la mejor ruta. El límite es de 15 saltos, como mencioné anteriormente.</li>
-                    <li>🌀 <marcador class="resaltado9">Problemas Potenciales: </marcador>Aunque es simple y fácil de implementar, el enfoque de vector de distancia tiene desventajas, como la convergencia lenta y la posibilidad de bucles de enrutamiento.</li>
+                    <li>𖦹 <marcador class="resaltado9">Vector de Distancia: </marcador>Cada router mantiene una tabla que contiene la distancia (número de saltos) a cada destino conocido en la red. Esta tabla se actualiza periódicamente.</li>
+                    <li>𖦹 <marcador class="resaltado9">Actualización Periódica: </marcador>Los routers envían sus tablas de enrutamiento a sus vecinos en intervalos regulares (cada 30 segundos, por defecto). Esta información incluye la distancia a los destinos y la dirección del siguiente salto.</li>
+                    <li>𖦹 <marcador class="resaltado9">Cálculo de Rutas: </marcador>Al recibir actualizaciones de sus vecinos, cada router compara la información recibida con su tabla de enrutamiento. Si encuentra una ruta más corta a un destino, actualiza su tabla.</li>
+                    <li>𖦹 <marcador class="resaltado9">Métrica de Saltos: </marcador>RIP utiliza el número de saltos como su única métrica para determinar la mejor ruta. El límite es de 15 saltos, como mencioné anteriormente.</li>
+                    <li>𖦹 <marcador class="resaltado9">Problemas Potenciales: </marcador>Aunque es simple y fácil de implementar, el enfoque de vector de distancia tiene desventajas, como la convergencia lenta y la posibilidad de bucles de enrutamiento.</li>
                 </ul>
                 <div class="blog-image-grande">
                     <img src="media/rip3.jpeg" alt="">
