--- a/network.html
+++ b/network.html
@@ -144,28 +144,32 @@
         <div class="article-section">
             <img src="media/imagen2.png" alt="ACL" class="article-image">
             <h2><a href="network/acl.html">ACL</a></h2>
-        </div> 
+        </div>
         <div class="article-section">
             <img src="media/imagen2.png" alt="NAT" class="article-image">
             <h2><a href="network/nat.html">NAT</a></h2>
-        </div> 
+        </div>
         <div class="article-section">
             <img src="media/imagen2.png" alt="OSPF" class="article-image">
             <h2><a href="network/ospf.html">OSPF</a></h2>
-        </div> 
+        </div>
         <div class="article-section">
             <img src="media/imagen2.png" alt="VPN" class="article-image">
             <h2><a href="network/vpn.html">VPN</a></h2>
-        </div> 
+        </div>
         <div class="article-section">
             <img src="media/imagen2.png" alt="VRRP" class="article-image">
             <h2><a href="network/vrrp.html">VRRP</a></h2>
-        </div> 
+        </div>
+        <div class="article-section">
+            <img src="media/imagen2.png" alt="MPLS" class="article-image">
+            <h2><a href="network/mpls.html">MPLS</a></h2>
+        </div>
         <!-- Nuevo artículo -->
         <div class="article-section">
             <img src="media/imagen2.png" alt="En proceso" class="article-image">
             <h2><a href="network/unknown.html">En proceso</a></h2>
-        </div> 
+        </div>
         <br>
         <br> 
         <div class="buttons__cover">
