--- a/network/mpls.html
+++ b/network/mpls.html
@@ -683,7 +683,7 @@ router(config)# mpls ldp password required for 1</code></pre>
                       <button><i class="fa fa-clone"></i><span> Copy</span></button>
                     </div>
                 </div>
-                <h2>Creación de Sesiones Remotas de LDP</h2>
+                <h2>Sesiones Remotas</h2>
                 <p>En redes MPLS, puede ser necesario establecer sesiones LDP directamente entre dos routers remotos, saltándose un router intermedio. Este enfoque puede ser útil en ciertos casos donde no se desea que un router intermedio participe en la distribución de etiquetas, o cuando se busca optimizar el uso de recursos.</p>
                 <div class="consola">
                     <div class="barra-superior-consola">
