--- a/network.html
+++ b/network.html
@@ -165,6 +165,10 @@
             <img src="media/imagen2.png" alt="MPLS" class="article-image">
             <h2><a href="network/mpls.html">MPLS</a></h2>
         </div>
+        <div class="article-section">
+            <img src="media/imagen2.png" alt="QoS" class="article-image">
+            <h2><a href="network/qos.html">QoS</a></h2>
+        </div>
         <!-- Nuevo artículo -->
         <div class="article-section">
             <img src="media/imagen2.png" alt="En proceso" class="article-image">
