--- a/network.html
+++ b/network.html
@@ -173,6 +173,10 @@
             <img src="media/imagen2.png" alt="VoIP" class="article-image">
             <h2><a href="network/voip.html">VoIP</a></h2>
         </div>
+        <div class="article-section">
+            <img src="media/imagen2.png" alt="RSTP" class="article-image">
+            <h2><a href="network/rstp.html">RSTP</a></h2>
+        </div>
         <!-- Nuevo artículo -->
         <div class="article-section">
             <img src="media/imagen2.png" alt="En proceso" class="article-image">
