--- a/devops/ansible.html
+++ b/devops/ansible.html
@@ -1013,6 +1013,14 @@ nodo2                      : ok=2    changed=1    unreachable=0    failed=1    s
                         <div class="command-response-container">
                             <span id="terminal__prompt--response" class="multiline-text">BECOME password: 
    
+PLAY [Instalar MySQL en bases de datos] ************************************************
+
+TASK [Gathering Facts] *****************************************************************
+ok: [nodo3]
+
+TASK [Instalar apt-utils] **************************************************************
+ok: [nodo3]
+. . . [ snip ] . . .
                                             </span>
                         </div>
                     </section>
