--- a/devops/ansible.html
+++ b/devops/ansible.html
@@ -1084,7 +1084,9 @@ ok: [nodo3]
                         <button><i class="fa fa-clone"></i><span> Copy</span></button>
                     </div>
                 </div>
-                <p></p>
+                <div class="blog-image-grande">
+                    <img src="media/ansible12.gif" alt="">
+                </div>
             </div>
         </div>       
     </main>
