--- a/devops.html
+++ b/devops.html
@@ -73,6 +73,10 @@
             <img src="media/imagen38.svg" alt="Kafka" class="article-image">
             <h2><a href="devops/kafka.html">Kafka</a></h2>
         </div> 
+        <div class="article-section">
+            <img src="media/imagen38.svg" alt="Ansible" class="article-image">
+            <h2><a href="devops/ansible.html">Ansible</a></h2>
+        </div> 
         <!-- Nuevo artículo -->
         <div class="article-section">
             <img src="media/imagen38.svg" alt="En proceso" class="article-image">
