--- a/network.html
+++ b/network.html
@@ -193,8 +193,8 @@
                 <div class="banner__icon-robot">
                     <img src="media/networking7.png" id="icon_robot" alt="">
                 </div>
-                <div class="banner__icon-fire">
-                    <img src="media/global-network.png" id="icon_fire" alt="">
+                <div class="banner__icon-water">
+                    <img src="media/global-network.png" id="icon_water" alt="">
                 </div>    
                 <div class="banner__text">
                     <h2>Descubre la vanguardia tecnológica y sé parte del cambio hacia un futuro digital imparable.</h2>
