--- a/devops.html
+++ b/devops.html
@@ -74,6 +74,11 @@
             <h2><a href="devops/kafka.html">Kafka</a></h2>
         </div> 
         <div class="article-section">
+            <img src="media/imagen38.svg" alt="GitHub" class="article-image">
+            <h2><a href="devops/github.html">GitHub</a></h2>
+        </div> 
+
+        <div class="article-section">
             <img src="media/imagen38.svg" alt="Ansible" class="article-image">
             <h2><a href="devops/ansible.html">Ansible</a></h2>
         </div> 
