--- a/devops.html
+++ b/devops.html
@@ -77,10 +77,17 @@
             <img src="media/imagen38.svg" alt="GitHub" class="article-image">
             <h2><a href="devops/github.html">GitHub</a></h2>
         </div> 
-
+        <div class="article-section">
+            <img src="media/imagen38.svg" alt="Jenkins" class="article-image">
+            <h2><a href="devops/jenkins.html">Jenkins</a></h2>
+        </div>
         <div class="article-section">
             <img src="media/imagen38.svg" alt="Ansible" class="article-image">
             <h2><a href="devops/ansible.html">Ansible</a></h2>
+        </div> 
+        <div class="article-section">
+            <img src="media/imagen38.svg" alt="Terraform" class="article-image">
+            <h2><a href="devops/terraform.html">Terraform</a></h2>
         </div> 
         <!-- Nuevo artículo -->
         <div class="article-section">
